deployment-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-a
spec:
  replicas: 8
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        version: A
    spec:
      containers:
        - name: nginx
          image: augustorcn/nginx:a
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
